--- a/docs/package.json
+++ b/docs/package.json
@@ -2,6 +2,9 @@
   "name": "@kiwicom/orbit.kiwi",
   "version": "0.17.0",
   "private": true,
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
     "dev": "gatsby develop",
     "fetch:contributors": "babel-node ./plugins/contributors/fetchContributors.mjs",
@@ -38,9 +41,9 @@
     "@mdx-js/react": "^1.6.21",
     "@reach/router": "^1.3.4",
     "@testing-library/jest-dom": "^5.11.10",
-    "@testing-library/react": "^11.2.7",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/react-hooks": "^7.0.0",
-    "@testing-library/user-event": "^13.1.1",
+    "@testing-library/user-event": "^14.4.0",
     "@types/babel__core": "^7.1.19",
     "@types/babel__standalone": "^7.1.4",
     "@types/debounce": "^1.2.0",
