--- a/packages/orbit-design-tokens/package.json
+++ b/packages/orbit-design-tokens/package.json
@@ -7,7 +7,7 @@
   "type": "module",
   "types": "./dist/index.d.ts",
   "engines": {
-    "node": "^14.13.1 || >=16.0.0"
+    "node": ">=18.0.0"
   },
   "repository": {
     "type": "git",
