--- a/packages/orbit-tracking/package.json
+++ b/packages/orbit-tracking/package.json
@@ -18,7 +18,7 @@
     "./package.json": "./package.json"
   },
   "engines": {
-    "node": "^14.13.1 || >=16.0.0"
+    "node": ">=18.0.0"
   },
   "files": [
     "bin",
