--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
   "license": "MIT",
   "resolutions": {
     "@types/eslint": "^8.37.0",
-    "@types/react": "^17.0.26",
-    "@types/react-dom": "^17.0.9",
+    "@types/react": ">=17.0.26",
+    "@types/react-dom": ">=17.0.9",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
@@ -75,8 +75,8 @@
     "@types/dotenv-safe": "^8.1.2",
     "@types/lodash": "^4.14.194",
     "@types/prettier": "^2.7.2",
-    "@types/react": "^17.0.26",
-    "@types/react-dom": "^17.0.9",
+    "@types/react": ">=17.0.26",
+    "@types/react-dom": ">=17.0.9",
     "@types/testing-library__jest-dom": "^5.14.5",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
@@ -108,8 +108,8 @@
     "filedirname": "^2.7.0",
     "flow-bin": "^0.187.1",
     "husky": "^6.0.0",
-    "jest": "^28.1.1",
-    "jest-environment-jsdom": "^28.1.1",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
     "jest-matchmedia-mock": "^1.1.0",
     "lerna": "5.2.0",
     "lint-staged": "^12.3.2",
@@ -121,8 +121,17 @@
     "prettier": "^2.8.7",
     "prettier-plugin-tailwindcss": "^0.4.1",
     "raf": "^3.4.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "remark-cli": "^9.0.0",
+    "remark-frontmatter": "^2.0.0",
+    "remark-lint": "^8.0.0",
+    "remark-lint-first-heading-level": "^2.0.1",
+    "remark-mdx": "^1.6.22",
+    "remark-preset-lint-markdown-style-guide": "^4.0.0",
+    "remark-preset-lint-recommended": "^5.0.0",
+    "remark-preset-prettier": "^0.4.0",
+    "remark-validate-links": "^10.0.2",
     "size-limit": "^8.0.0",
     "slackify-markdown": "^4.3.1",
     "styled-components": "^5.3.1",
