--- a/packages/orbit-components/package.json
+++ b/packages/orbit-components/package.json
@@ -80,7 +80,7 @@
     "@popperjs/core": "^2.9.2",
     "clsx": "^2.0.0",
     "react-hot-toast": "^2.4.0",
-    "react-popper": "^2.2.5",
+    "react-popper": "^2.3.0",
     "react-uid": "^2.3.2"
   },
   "devDependencies": {
@@ -104,7 +104,11 @@
     "@svgr/plugin-jsx": "^6.3.1",
     "@svgr/plugin-prettier": "^6.3.1",
     "@svgr/plugin-svgo": "^6.3.1",
-    "@testing-library/react": "^11.2.7",
+    "@testing-library/cypress": "^8.0.0",
+    "@testing-library/jest-dom": "^5.11.10",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.0",
+    "@types/capitalize": "^2.0.0",
     "@types/readable-stream": "^2.3.13",
     "@types/styled-components": "^5.1.15",
     "@types/svgicons2svgfont": "^10.0.1",
@@ -119,7 +123,7 @@
     "fs-extra": "^9.0.1",
     "jest-styled-components": "^7.0.5",
     "jscodeshift": "^0.13.1",
-    "jsdom": "^16.5.3",
+    "jsdom": "^20.0.3",
     "loki": "^0.30.3",
     "monstra": "^0.9.2",
     "nanostores": "^0.5.12",
