--- a/packages/orbit-themer/package.json
+++ b/packages/orbit-themer/package.json
@@ -21,9 +21,9 @@
   "dependencies": {
     "deep-object-diff": "^1.1.9",
     "object-hash": "^3.0.0",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-color": "^2.19.3",
-    "react-dom": "^17.0.2"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@kiwicom/babel-plugin-orbit-components": "^3.5.2",
@@ -33,6 +33,6 @@
     "styled-components": "^5.3.5",
     "prism-react-renderer": "^1.3.5",
     "copy-to-clipboard": "^3.3.1",
-    "@types/react": "^17.0.26"
+    "@types/react": ">=17.0.26"
   }
 }
