feat: update to React 18
Updates react to v18 and testing-library to latest version
Some tests needed refactor because of breaking changes

--- a/packages/orbit-tailwind-preset/package.json
+++ b/packages/orbit-tailwind-preset/package.json
@@ -34,5 +34,8 @@
   },
   "dependencies": {
     "@kiwicom/orbit-design-tokens": "^5.0.1"
+  },
+  "devDependencies": {
+    "@testing-library/react": "^13.4.0"
   }
 }
