--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
   "license": "MIT",
   "resolutions": {
     "@types/eslint": "^8.37.0",
-    "@types/react": "^17.0.26",
-    "@types/react-dom": "^17.0.9",
+    "@types/react": ">=17.0.26",
+    "@types/react-dom": ">=17.0.9",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
@@ -68,15 +68,15 @@
     "@stylelint/postcss-css-in-js": "^0.38.0",
     "@testing-library/cypress": "^8.0.0",
     "@testing-library/jest-dom": "^5.11.10",
-    "@testing-library/react": "^11.2.7",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/react-hooks": "^7.0.0",
-    "@testing-library/user-event": "^13.1.1",
+    "@testing-library/user-event": "^14.4.0",
     "@types/dedent": "^0.7.0",
     "@types/dotenv-safe": "^8.1.2",
     "@types/lodash": "^4.14.194",
     "@types/prettier": "^2.7.2",
-    "@types/react": "^17.0.26",
-    "@types/react-dom": "^17.0.9",
+    "@types/react": ">=17.0.26",
+    "@types/react-dom": ">=17.0.9",
     "@types/testing-library__jest-dom": "^5.14.5",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
@@ -101,15 +101,15 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-orbit-components": "*",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-tailwindcss": "^3.13.0",
     "fast-glob": "^3.2.12",
     "filedirname": "^2.7.0",
     "flow-bin": "^0.187.1",
     "husky": "^6.0.0",
-    "jest": "^28.1.1",
-    "jest-environment-jsdom": "^28.1.1",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
     "jest-matchmedia-mock": "^1.1.0",
     "lerna": "5.2.0",
     "lint-staged": "^12.3.2",
@@ -121,8 +121,17 @@
     "prettier": "^2.8.7",
     "prettier-plugin-tailwindcss": "^0.4.1",
     "raf": "^3.4.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "remark-cli": "^9.0.0",
+    "remark-frontmatter": "^2.0.0",
+    "remark-lint": "^8.0.0",
+    "remark-lint-first-heading-level": "^2.0.1",
+    "remark-mdx": "^1.6.22",
+    "remark-preset-lint-markdown-style-guide": "^4.0.0",
+    "remark-preset-lint-recommended": "^5.0.0",
+    "remark-preset-prettier": "^0.4.0",
+    "remark-validate-links": "^10.0.2",
     "size-limit": "^8.0.0",
     "slackify-markdown": "^4.3.1",
     "styled-components": "^5.3.1",
