chore: update prettier action
chore: fixes after review

chore: fixes after review

chore: visual fixes after review

--- a/docs/src/data/component-status.yaml
+++ b/docs/src/data/component-status.yaml
@@ -504,7 +504,7 @@
   group: Structure
 - component: Tabs
   figma: Released
-  react: Planned
+  react: Released
   ios: Released
   android: Released
   docs: Released
