chore(Illustration): update ts template

--- a/packages/orbit-components/src/Illustration/TYPESCRIPT_TEMPLATE.template
+++ b/packages/orbit-components/src/Illustration/TYPESCRIPT_TEMPLATE.template
@@ -1,6 +1,8 @@
 /*
   DOCUMENTATION: https://orbit.kiwi/components/illustration/
 */
+import type React from "react";
+
 import type * as Common from "../common/types";
 
 export type Name =%NAMES%
