--- a/docs/package.json
+++ b/docs/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "gatsby develop",
     "fetch:contributors": "babel-node ./plugins/contributors/fetchContributors.mjs",
+    "changelog": "zx ./services/changelog.mjs",
     "check:types": "tsc",
     "build": "gatsby build",
     "clean": "gatsby clean",
@@ -116,12 +117,12 @@
     "styled-components": "^5.3.1",
     "tailwindcss": "^2.1.1",
     "tinykeys": "^1.2.0",
-    "to-vfile": "^6.1.0",
+    "to-vfile": "7.2.4",
     "unified": "^9.2.0",
     "unist-util-visit": "^2.0.3",
     "use-resize-observer": "^8.0.0",
     "uuid": "^8.3.2",
-    "vfile-reporter": "^7.0.4",
+    "vfile-reporter": "^7.0.5",
     "webpack": "^5.76.0",
     "zx": "7.0.7"
   }
