chore(InputTags): fix incorrect spacing tokens
chore(ErrorFormTooltip): remove redundant box-shadow

test(useTransition): remove redundant ts-expect-error

chore(Seat): remove ts error

chore(SegmentedSwitch): suppress ts issue

test(Stack): remove redundant suppression

--- a/packages/orbit-components/tsconfig-build.json
+++ b/packages/orbit-components/tsconfig-build.json
@@ -8,6 +8,6 @@
     "importsNotUsedAsValues": "error",
     "emitDeclarationOnly": true
   },
-  "include": ["src/**/*", "css-prop.d.ts"],
+  "include": ["src/**/*", "typings/**/*.d.ts"],
   "exclude": ["**/*.test.*", "**/__tests__/**/*", "**/__typetests__/**/*", "**/*.stories.*"]
 }
