chore(tokens): add prepublishOnly

--- a/packages/orbit-design-tokens/package.json
+++ b/packages/orbit-design-tokens/package.json
@@ -33,6 +33,7 @@
     "build:xml": "NODE_RUN=true ts-node-esm ./scripts/generateXMLDesignTokens.ts",
     "build": "yarn clean && tsup && yarn run generate:json && yarn run build-html && yarn run build-web && yarn run build-ios && yarn run build-android && yarn build:xml && yarn generate:flow",
     "size:build": "yarn run build",
+    "prepublishOnly": "yarn build",
     "clean": "rimraf dist pages output"
   },
   "author": "Kiwi.com",
