--- a/packages/orbit-design-tokens/package.json
+++ b/packages/orbit-design-tokens/package.json
@@ -44,21 +44,12 @@
     "design"
   ],
   "devDependencies": {
-    "@babel/core": "^7.19.0",
-    "@babel/preset-env": "^7.19.1",
-    "@babel/preset-typescript": "^7.18.6",
-    "cpy-cli": "^4.1.0",
     "figx": "^0.1.0",
-    "filedirname": "^2.7.0",
     "lodash": "^4.17.21",
     "memfs": "^3.2.0",
     "optimist": "^0.6.1",
-    "rimraf": "^3.0.2",
     "theo": "^8.1.5",
-    "ts-node": "^10.9.1",
     "tsup": "^6.2.3",
-    "typescript": "^4.8.3",
-    "xml": "^1.0.1",
-    "zx": "^7.0.0"
+    "xml": "^1.0.1"
   }
 }
