--- a/packages/orbit-themer/package.json
+++ b/packages/orbit-themer/package.json
@@ -29,14 +29,7 @@
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
-    "@babel/cli": "^7.18.9",
-    "@babel/core": "^7.18.9",
-    "@babel/preset-env": "^7.18.9",
-    "@babel/preset-react": "^7.18.6",
-    "@babel/preset-typescript": "^7.18.6",
-    "@babel/runtime": "^7.18.9",
     "@kiwicom/babel-plugin-orbit-components": "^3.5.2",
-    "babel-loader": "^8.2.5",
-    "typescript": "^4.8.3"
+    "babel-loader": "^8.2.5"
   }
 }
