--- a/packages/orbit-tracking/package.json
+++ b/packages/orbit-tracking/package.json
@@ -32,7 +32,7 @@
   "scripts": {
     "dev": "tsup src/index.ts --watch",
     "build": "tsup",
-    "clean": "npx rimraf dist",
+    "clean": "del dist",
     "check:types": "tsc --noEmit",
     "eslint": "eslint 'src/**/*.ts'",
     "eslint:fix": "eslint --fix 'src/**/*.ts'"
@@ -49,19 +49,15 @@
     "zx": ">= 7.0.0"
   },
   "devDependencies": {
-    "@types/dotenv-safe": "^8.1.2",
     "@types/fs-extra": "^9.0.13",
     "@types/node": "^17.0.38",
     "@types/sade": "^1.7.4",
-    "tsup": "^6.1.0",
-    "typescript": "^4.7.4"
+    "tsup": "^6.1.0"
   },
   "dependencies": {
     "dotenv": "^16.0.1",
     "execa": "^6.1.0",
-    "filedirname": "^2.7.0",
     "react-scanner-orbit": "^2.0.0",
-    "sade": "^1.8.1",
-    "zx": "^7.0.7"
+    "sade": "^1.8.1"
   }
 }
