chore: update eslint and babel deps

--- a/package.json
+++ b/package.json
@@ -40,14 +40,22 @@
   "author": "kiwi.com",
   "license": "MIT",
   "resolutions": {
-    "@types/eslint": "^7.29.0",
+    "@types/eslint": "^8.37.0",
     "@types/react": "^17.0.26",
     "@types/react-dom": "^17.0.9",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.9",
-    "@babel/runtime": "7.18.9",
+    "@babel/core": "^7.21.4",
+    "@babel/eslint-parser": "^7.21.3",
+    "@babel/eslint-plugin": "^7.19.1",
+    "@babel/generator": "^7.21.4",
+    "@babel/preset-env": "^7.21.4",
+    "@babel/preset-flow": "^7.21.4",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.21.4",
+    "@babel/runtime": "7.21.0",
+    "@babel/types": "^7.21.4",
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
     "@kiwicom/browserslist-config": "^4.0.0",
@@ -56,29 +64,35 @@
     "@size-limit/file": "^8.0.0",
     "@size-limit/webpack": "^8.0.0",
     "@stylelint/postcss-css-in-js": "^0.38.0",
-    "@typescript-eslint/eslint-plugin": "^4.29.0",
-    "@typescript-eslint/parser": "^4.33.0",
     "babel-eslint": "^10.1.0",
+    "@types/dotenv-safe": "^8.1.2",
+    "@types/react": "^17.0.26",
+    "@types/react-dom": "^17.0.9",
+    "@typescript-eslint/eslint-plugin": "^5.57.1",
+    "@typescript-eslint/parser": "^5.57.1",
     "babel-jest": "^28.1.3",
     "browserslist": "^4.16.6",
     "conventional-changelog": "^3.1.24",
+    "cpy-cli": "^3.1.1",
     "cross-env": "^7.0.2",
+    "del-cli": "^5.0.0",
     "dotenv-safe": "^8.2.0",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-prettier": "^8.5.0",
+    "eslint": "^8.37.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-import-resolver-node": "^0.3.6",
-    "eslint-import-resolver-typescript": "^2.4.0",
+    "eslint-import-resolver-node": "^0.3.7",
+    "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-babel": "^5.3.1",
-    "eslint-plugin-flowtype": "^5.2.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.1.3",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-mdx": "^1.8.2",
+    "eslint-plugin-flowtype": "^8.0.3",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jest": "^27.2.1",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-mdx": "^2.0.5",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "filedirname": "^2.7.0",
     "flow-bin": "^0.187.1",
     "husky": "^6.0.0",
     "jest": "^28.1.1",
