--- a/packages/eslint-plugin-orbit-components/package.json
+++ b/packages/eslint-plugin-orbit-components/package.json
@@ -32,21 +32,12 @@
     "postpublish": "pinst --enable"
   },
   "peerDependencies": {
-    "eslint": ">=7"
+    "eslint": ">=8"
   },
   "dependencies": {
-    "@babel/types": "=7.12.10"
+    "@babel/types": "^7.21.4"
   },
   "devDependencies": {
-    "@babel/cli": "^7.12.8",
-    "@babel/core": "^7.18.2",
-    "@babel/preset-env": "^7.14.0",
-    "@babel/preset-typescript": "^7.13.0",
-    "@babel/types": "^7.13.0",
-    "@types/eslint": "^7.28.2",
-    "babel-eslint": "^10.1.0",
-    "del-cli": "^4.0.1",
-    "eslint": "^7.14.0",
     "pinst": "^2.1.4"
   }
 }
