--- a/package.json
+++ b/package.json
@@ -64,8 +64,8 @@
     "@size-limit/file": "^8.0.0",
     "@size-limit/webpack": "^8.0.0",
     "@stylelint/postcss-css-in-js": "^0.38.0",
-    "babel-eslint": "^10.1.0",
     "@types/dotenv-safe": "^8.1.2",
+    "@types/prettier": "^2.7.2",
     "@types/react": "^17.0.26",
     "@types/react-dom": "^17.0.9",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
@@ -108,15 +108,6 @@
     "raf": "^3.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "remark-cli": "^9.0.0",
-    "remark-frontmatter": "^2.0.0",
-    "remark-lint": "^8.0.0",
-    "remark-lint-first-heading-level": "^2.0.1",
-    "remark-mdx": "^1.6.22",
-    "remark-preset-lint-markdown-style-guide": "^4.0.0",
-    "remark-preset-lint-recommended": "^5.0.0",
-    "remark-preset-prettier": "^0.4.0",
-    "remark-validate-links": "^10.0.2",
     "size-limit": "^8.0.0",
     "slackify-markdown": "^4.3.1",
     "styled-components": "^5.3.1",
