--- a/packages/orbit-tracking/package.json
+++ b/packages/orbit-tracking/package.json
@@ -57,6 +57,7 @@
   "dependencies": {
     "dotenv": "^16.0.1",
     "execa": "^6.1.0",
+    "filedirname": "^2.7.0",
     "react-scanner-orbit": "^2.0.0",
     "sade": "^1.8.1"
   }
