chore: remove the rest of eslint errors

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   "devDependencies": {
     "@babel/core": "^7.21.4",
     "@babel/eslint-parser": "^7.21.3",
+    "@octokit/rest": "^19.0.5",
     "@babel/eslint-plugin": "^7.19.1",
     "@babel/generator": "^7.21.4",
     "@babel/preset-env": "^7.21.4",
@@ -60,7 +61,6 @@
     "@commitlint/config-conventional": "^17.0.3",
     "@kiwicom/browserslist-config": "^4.0.0",
     "@lerna/project": "^5.2.0",
-    "@octokit/rest": "^19.0.5",
     "@size-limit/file": "^8.0.0",
     "@size-limit/webpack": "^8.0.0",
     "@stylelint/postcss-css-in-js": "^0.38.0",
@@ -78,6 +78,7 @@
     "del-cli": "^5.0.0",
     "dotenv-safe": "^8.2.0",
     "eslint": "^8.37.0",
+    "@types/dedent": "^0.7.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.8.0",
     "eslint-import-resolver-alias": "^1.1.2",
@@ -88,15 +89,16 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-mdx": "^2.0.5",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "filedirname": "^2.7.0",
     "flow-bin": "^0.187.1",
+    "dedent": "^0.7.0",
     "husky": "^6.0.0",
     "jest": "^28.1.1",
     "jest-environment-jsdom": "^28.1.1",
+    "jest-matchmedia-mock": "^1.1.0",
     "lerna": "5.2.0",
     "lint-staged": "^12.3.2",
     "markdown-chalk": "^2.1.0",
