chore: move eslint deps to root

--- a/package.json
+++ b/package.json
@@ -46,9 +46,9 @@
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "@babel/cli": "^7.21.0",
     "@babel/core": "^7.21.4",
     "@babel/eslint-parser": "^7.21.3",
-    "@octokit/rest": "^19.0.5",
     "@babel/eslint-plugin": "^7.19.1",
     "@babel/generator": "^7.21.4",
     "@babel/preset-env": "^7.21.4",
@@ -61,9 +61,11 @@
     "@commitlint/config-conventional": "^17.0.3",
     "@kiwicom/browserslist-config": "^4.0.0",
     "@lerna/project": "^5.2.0",
+    "@octokit/rest": "^19.0.5",
     "@size-limit/file": "^8.0.0",
     "@size-limit/webpack": "^8.0.0",
     "@stylelint/postcss-css-in-js": "^0.38.0",
+    "@types/dedent": "^0.7.0",
     "@types/dotenv-safe": "^8.1.2",
     "@types/prettier": "^2.7.2",
     "@types/react": "^17.0.26",
@@ -75,10 +77,10 @@
     "conventional-changelog": "^3.1.24",
     "cpy-cli": "^3.1.1",
     "cross-env": "^7.0.2",
+    "dedent": "^0.7.0",
     "del-cli": "^5.0.0",
     "dotenv-safe": "^8.2.0",
     "eslint": "^8.37.0",
-    "@types/dedent": "^0.7.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.8.0",
     "eslint-import-resolver-alias": "^1.1.2",
@@ -94,7 +96,6 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "filedirname": "^2.7.0",
     "flow-bin": "^0.187.1",
-    "dedent": "^0.7.0",
     "husky": "^6.0.0",
     "jest": "^28.1.1",
     "jest-environment-jsdom": "^28.1.1",
@@ -104,6 +105,7 @@
     "markdown-chalk": "^2.1.0",
     "markdown-magic": "^2.6.0",
     "merge-stream": "^2.0.0",
+    "pinst": "^2.1.4",
     "postcss": "^8.4.18",
     "postcss-syntax": "^0.36.2",
     "prettier": "^2.8.7",
