--- a/packages/babel-plugin-orbit-components/package.json
+++ b/packages/babel-plugin-orbit-components/package.json
@@ -28,11 +28,6 @@
     "test": "yarn test:file && yarn test:compile && node scripts/testRequire.js"
   },
   "devDependencies": {
-    "@babel/cli": "^7.12.8",
-    "@babel/core": "^7.18.2",
-    "@kiwicom/orbit-components": "^6.4.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "styled-components": "^5.3.1"
+    "@kiwicom/orbit-components": "^6.4.0"
   }
 }
