--- a/docs/package.json
+++ b/docs/package.json
@@ -21,23 +21,18 @@
     ]
   },
   "dependencies": {
-    "@babel/core": "^7.18.9",
-    "@babel/generator": "^7.18.9",
     "@babel/plugin-syntax-jsx": "^7.18.6",
-    "@babel/runtime": "^7.18.2",
     "@babel/standalone": "^7.18.9",
     "@csstools/convert-colors": "^2.0.0",
     "@icons-pack/react-simple-icons": "^4.0.0",
     "@jsdevtools/rehype-url-inspector": "^2.0.2",
     "@kiwicom/babel-plugin-orbit-components": "*",
-    "@kiwicom/browserslist-config": "^4.0.0",
     "@kiwicom/orbit-components": "*",
     "@kiwicom/orbit-design-tokens": "*",
     "@kiwicom/orbit-themer": "*",
     "@mapbox/rehype-prism": "^0.8.0",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.21",
-    "@octokit/rest": "^18.0.14",
     "@reach/router": "^1.3.4",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.7",
@@ -50,7 +45,6 @@
     "@types/lodash": "^4.14.170",
     "@types/mdx-js__react": "^1.5.3",
     "@types/reach__router": "^1.3.10",
-    "@types/react": "^17.0.26",
     "@types/react-helmet": "^6.1.1",
     "@types/react-scrollspy": "^3.3.3",
     "@types/resize-observer-browser": "^0.1.7",
@@ -61,19 +55,16 @@
     "babel-plugin-styled-components": "^2.0.7",
     "babel-preset-gatsby": "^2.17.0",
     "browser-sync": "^2.27.9",
-    "chalk": "^4.1.2",
     "check-links": "^1.1.8",
     "copy-to-clipboard": "^3.3.1",
-    "dedent": "^0.7.0",
-    "dotenv-safe": "^8.2.0",
     "downshift": "^6.1.7",
     "eslint-plugin-orbit-components": "*",
-    "filedirname": "^2.7.0",
     "fontfaceobserver": "^2.1.0",
     "fs-extra": "^9.1.0",
     "fuzzaldrin-plus": "^0.6.0",
     "gatsby": "^4.11.1",
     "gatsby-image": "^3.11.0",
+    "eslint-plugin-mdx": "^1.17.0",
     "gatsby-plugin-create-client-paths": "^4.9.0",
     "gatsby-plugin-google-gtag": "^4.9.0",
     "gatsby-plugin-image": "^2.24.0",
@@ -94,16 +85,11 @@
     "gatsby-transformer-sharp": "^4.11.0",
     "globby": "^11.0.2",
     "gray-matter": "^4.0.2",
-    "jest": "^28.1.1",
-    "jest-environment-jsdom": "^28.1.1",
-    "jest-matchmedia-mock": "^1.1.0",
     "js-yaml": "^4.0.0",
     "jsondiffpatch": "^0.4.1",
     "lodash": "^4.17.21",
     "memfs": "^3.2.0",
     "prism-react-renderer": "^1.2.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
     "react-github-btn": "^1.2.0",
     "react-google-login": "^5.2.2",
     "react-helmet": "^6.1.0",
@@ -111,19 +97,27 @@
     "react-polymorphic-types": "^1.0.3",
     "react-scrollspy": "^3.4.3",
     "recharts": "^2.1.6",
-    "rehype-parse": "^7.0.1",
-    "rehype-stringify": "^8.0.0",
+    "rehype-parse": "^8.0.4",
+    "rehype-stringify": "^9.0.3",
     "remark-deflist": "^0.3.0",
     "styled-components": "^5.3.1",
     "tailwindcss": "^2.1.1",
     "tinykeys": "^1.2.0",
     "to-vfile": "7.2.4",
-    "unified": "^9.2.0",
+    "unified": "^10.1.2",
     "unist-util-visit": "^2.0.3",
     "use-resize-observer": "^8.0.0",
     "uuid": "^8.3.2",
     "vfile-reporter": "^7.0.5",
     "webpack": "^5.76.0",
-    "zx": "7.0.7"
+    "remark-cli": "^9.0.0",
+    "remark-frontmatter": "^2.0.0",
+    "remark-lint": "^8.0.0",
+    "remark-lint-first-heading-level": "^2.0.1",
+    "remark-mdx": "^1.6.22",
+    "remark-preset-lint-markdown-style-guide": "^4.0.0",
+    "remark-preset-lint-recommended": "^5.0.0",
+    "remark-preset-prettier": "^0.4.0",
+    "remark-validate-links": "^10.0.2"
   }
 }
