--- a/packages/orbit-components/package.json
+++ b/packages/orbit-components/package.json
@@ -72,10 +72,10 @@
     "ts-node": "^10.9.1"
   },
   "peerDependencies": {
-    "@babel/runtime": "^7.18.9",
-    "react": ">=16.14.0",
-    "react-dom": ">=16.12.0",
-    "styled-components": "^4 || ^5"
+    "@babel/runtime": "^7.21.0",
+    "react": ">=17.0.0",
+    "react-dom": ">=17.0.0",
+    "styled-components": "^5"
   },
   "dependencies": {
     "@kiwicom/orbit-design-tokens": "^3.2.2",
@@ -85,25 +85,12 @@
     "react-uid": "^2.3.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.18.9",
-    "@babel/core": "^7.18.9",
-    "@babel/generator": "^7.18.9",
-    "@babel/node": "^7.18.9",
-    "@babel/plugin-transform-runtime": "^7.18.9",
-    "@babel/preset-env": "^7.18.9",
-    "@babel/preset-flow": "^7.18.6",
-    "@babel/preset-react": "^7.18.6",
-    "@babel/preset-typescript": "^7.18.6",
-    "@babel/runtime": "^7.18.9",
-    "@babel/types": "^7.18.9",
+    "@babel/helper-get-function-arity": "^7.16.7",
+    "@babel/plugin-transform-runtime": "^7.21.4",
     "@cypress/vite-dev-server": "^4.0.0",
     "@emotion/core": "^11.0.0",
-    "@kiwicom/browserslist-config": "^4.0.0",
     "@nanostores/react": "^0.2.0",
     "@nanostores/router": "^0.3.1",
-    "@octokit/rest": "^18.0.14",
-    "@size-limit/file": "^8.0.0",
-    "@size-limit/webpack": "^8.0.0",
     "@size-limit/webpack-why": "^8.0.0",
     "@storybook/addon-actions": "^6.4.19",
     "@storybook/addon-backgrounds": "^6.5.9",
@@ -125,9 +112,6 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/react-hooks": "^7.0.0",
     "@testing-library/user-event": "^13.1.1",
-    "@types/dedent": "^0.7.0",
-    "@types/react": "^17.0.26",
-    "@types/react-dom": "^17.0.9",
     "@types/readable-stream": "^2.3.13",
     "@types/storybook__react": "^5.2.1",
     "@types/styled-components": "^5.1.15",
@@ -135,18 +119,12 @@
     "@types/testing-library__jest-dom": "^5.14.5",
     "@types/webpack": "^5.28.0",
     "@vitejs/plugin-react": "^2.2.0",
-    "babel-loader": "^8.2.5",
+    "babel-loader": "^9.1.2",
     "babel-plugin-require-context-hook": "^1.0.0",
     "babel-plugin-styled-components": "^2.0.7",
-    "cpy-cli": "^3.1.1",
     "cypress": "^10.11.0",
-    "dedent": "^0.7.0",
-    "dotenv-safe": "^8.2.0",
-    "filedirname": "^2.7.0",
     "flowgen": "^1.20.1",
     "fs-extra": "^9.0.1",
-    "glob": "^7.1.2",
-    "jest-matchmedia-mock": "^1.1.0",
     "jest-styled-components": "^7.0.5",
     "jscodeshift": "^0.13.1",
     "jsdom": "^16.5.3",
@@ -155,23 +133,17 @@
     "monstra": "^0.9.2",
     "nanostores": "^0.5.12",
     "ora": "^6.1.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
     "react-element-to-jsx-string": "^14.3.2",
     "react-window": "^1.8.6",
-    "rimraf": "^3.0.2",
     "sharp": "^0.30.5",
     "start-server-and-test": "^1.13.1",
     "styled-components": "^5.3.1",
     "surge": "^0.23.0",
     "svg2ttf": "^6.0.0",
     "svgicons2svgfont": "^10.0.0",
-    "ts-node": "10.9.1",
     "ttf2woff2": "^4.0.1",
-    "typescript": "^4.8.3",
     "vite": "^3.2.3",
     "webpack": "^5.76.0",
-    "webpack-cli": "^4.9.2",
-    "zx": "^7.0.7"
+    "webpack-cli": "^4.9.2"
   }
 }
