docs: add missing babel-node

--- a/docs/package.json
+++ b/docs/package.json
@@ -21,6 +21,7 @@
     ]
   },
   "dependencies": {
+    "@babel/node": "^7.20.7",
     "@babel/plugin-syntax-jsx": "^7.18.6",
     "@babel/standalone": "^7.18.9",
     "@csstools/convert-colors": "^2.0.0",
@@ -58,13 +59,13 @@
     "check-links": "^1.1.8",
     "copy-to-clipboard": "^3.3.1",
     "downshift": "^6.1.7",
+    "eslint-plugin-mdx": "^1.17.0",
     "eslint-plugin-orbit-components": "*",
     "fontfaceobserver": "^2.1.0",
     "fs-extra": "^9.1.0",
     "fuzzaldrin-plus": "^0.6.0",
     "gatsby": "^4.11.1",
     "gatsby-image": "^3.11.0",
-    "eslint-plugin-mdx": "^1.17.0",
     "gatsby-plugin-create-client-paths": "^4.9.0",
     "gatsby-plugin-google-gtag": "^4.9.0",
     "gatsby-plugin-image": "^2.24.0",
@@ -99,7 +100,16 @@
     "recharts": "^2.1.6",
     "rehype-parse": "^8.0.4",
     "rehype-stringify": "^9.0.3",
+    "remark-cli": "^9.0.0",
     "remark-deflist": "^0.3.0",
+    "remark-frontmatter": "^2.0.0",
+    "remark-lint": "^8.0.0",
+    "remark-lint-first-heading-level": "^2.0.1",
+    "remark-mdx": "^1.6.22",
+    "remark-preset-lint-markdown-style-guide": "^4.0.0",
+    "remark-preset-lint-recommended": "^5.0.0",
+    "remark-preset-prettier": "^0.4.0",
+    "remark-validate-links": "^10.0.2",
     "styled-components": "^5.3.1",
     "tailwindcss": "^2.1.1",
     "tinykeys": "^1.2.0",
@@ -109,15 +119,6 @@
     "use-resize-observer": "^8.0.0",
     "uuid": "^8.3.2",
     "vfile-reporter": "^7.0.5",
-    "webpack": "^5.76.0",
-    "remark-cli": "^9.0.0",
-    "remark-frontmatter": "^2.0.0",
-    "remark-lint": "^8.0.0",
-    "remark-lint-first-heading-level": "^2.0.1",
-    "remark-mdx": "^1.6.22",
-    "remark-preset-lint-markdown-style-guide": "^4.0.0",
-    "remark-preset-lint-recommended": "^5.0.0",
-    "remark-preset-prettier": "^0.4.0",
-    "remark-validate-links": "^10.0.2"
+    "webpack": "^5.76.0"
   }
 }
