chore: init tailwind package
chore: add author to orbit package

chore: init tailwind preset package

--- a/packages/eslint-plugin-orbit-components/package.json
+++ b/packages/eslint-plugin-orbit-components/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eslint-plugin-orbit-components",
+  "name": "@kiwicom/eslint-plugin-orbit-components",
   "description": "Collection of ESLint rules to enforce the best usage practices of @kiwicom/orbit-components",
   "version": "0.6.10",
   "author": "Kiwi.com",
