--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "test-ci": "jest --ci --maxWorkers=2 && lerna run test",
     "test": "jest",
     "themer": "yarn workspace @kiwicom/orbit-themer",
+    "tailwind-preset": "yarn workspace @kiwicom/orbit-tailwind-preset",
     "tokens": "yarn workspace @kiwicom/orbit-design-tokens",
     "tracking": "yarn workspace @kiwicom/orbit-tracking",
     "update-supported-browsers": "markdown --path .github/contribution/testing-conventions.md && git add .github/contribution/testing-conventions.md"
@@ -67,6 +68,7 @@
     "@stylelint/postcss-css-in-js": "^0.38.0",
     "@types/dedent": "^0.7.0",
     "@types/dotenv-safe": "^8.1.2",
+    "@types/lodash": "^4.14.194",
     "@types/prettier": "^2.7.2",
     "@types/react": "^17.0.26",
     "@types/react-dom": "^17.0.9",
@@ -104,6 +106,7 @@
     "jest-matchmedia-mock": "^1.1.0",
     "lerna": "5.2.0",
     "lint-staged": "^12.3.2",
+    "lodash": "^4.17.21",
     "markdown-magic": "^2.6.0",
     "postcss": "^8.4.18",
     "postcss-syntax": "^0.36.2",
@@ -117,8 +120,10 @@
     "stylelint": "^14.14.1",
     "stylelint-config-recommended": "^9.0.0",
     "stylelint-config-styled-components": "^0.1.1",
+    "tailwindcss": "^3.3.1",
     "ts-node": "^10.9.1",
     "tsc-files": "^1.1.3",
+    "tsup": "^6.7.0",
     "typescript": "^4.8.3",
     "zx": "^7.0.7"
   }
