--- a/packages/orbit-tracking/package.json
+++ b/packages/orbit-tracking/package.json
@@ -51,8 +51,7 @@
   "devDependencies": {
     "@types/fs-extra": "^9.0.13",
     "@types/node": "^17.0.38",
-    "@types/sade": "^1.7.4",
-    "tsup": "^6.1.0"
+    "@types/sade": "^1.7.4"
   },
   "dependencies": {
     "dotenv": "^16.0.1",
