chore: init tailwind package
chore: add author to orbit package

chore: init tailwind preset package

chore: init tailwind package

chore: add author to orbit package

chore: init tailwind preset package

--- a/packages/orbit-components/package.json
+++ b/packages/orbit-components/package.json
@@ -3,6 +3,7 @@
   "version": "7.8.0",
   "description": "Orbit-components is a React component library which provides developers with the easiest possible way of building Kiwi.com’s products.",
   "sideEffects": false,
+  "author": "Kiwi.com",
   "main": "lib/index.js",
   "module": "es/index.js",
   "scripts": {
