--- a/docs/package.json
+++ b/docs/package.json
@@ -31,6 +31,7 @@
     "@kiwicom/orbit-components": "*",
     "@kiwicom/orbit-design-tokens": "*",
     "@kiwicom/orbit-themer": "*",
+    "@loadable/component": "^5.15.3",
     "@mapbox/rehype-prism": "^0.8.0",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.21",
@@ -43,6 +44,7 @@
     "@types/babel__standalone": "^7.1.4",
     "@types/debounce": "^1.2.0",
     "@types/fontfaceobserver": "^0.0.6",
+    "@types/loadable__component": "^5.13.4",
     "@types/lodash": "^4.14.170",
     "@types/mdx-js__react": "^1.5.3",
     "@types/reach__router": "^1.3.10",
@@ -69,6 +71,7 @@
     "gatsby-plugin-create-client-paths": "^4.9.0",
     "gatsby-plugin-google-gtag": "^4.9.0",
     "gatsby-plugin-image": "^2.24.0",
+    "gatsby-plugin-loadable-components-ssr": "^4.3.2",
     "gatsby-plugin-lodash": "^5.12.1",
     "gatsby-plugin-manifest": "^4.11.1",
     "gatsby-plugin-mdx": "^3.15.2",
@@ -94,7 +97,7 @@
     "react-github-btn": "^1.2.0",
     "react-google-login": "^5.2.2",
     "react-helmet": "^6.1.0",
-    "react-live": "^2.2.3",
+    "react-live": "^4.0.0",
     "react-polymorphic-types": "^1.0.3",
     "react-scrollspy": "^3.4.3",
     "recharts": "^2.1.6",
