--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "fast-glob": "^3.2.12",
     "filedirname": "^2.7.0",
     "flow-bin": "^0.187.1",
     "husky": "^6.0.0",
