--- a/packages/orbit-components/tsconfig-build.json
+++ b/packages/orbit-components/tsconfig-build.json
@@ -4,6 +4,7 @@
     "rootDir": "src",
     "outDir": "lib",
     "declaration": true,
+    "skipLibCheck": true,
     "moduleResolution": "node",
     "importsNotUsedAsValues": "error",
     "emitDeclarationOnly": true
