--- a/package.json
+++ b/package.json
@@ -117,6 +117,7 @@
     "stylelint-config-recommended": "^9.0.0",
     "stylelint-config-styled-components": "^0.1.1",
     "ts-node": "^10.9.1",
+    "tsc-files": "^1.1.3",
     "typescript": "^4.8.3",
     "zx": "^7.0.7"
   }
