--- a/packages/orbit-themer/package.json
+++ b/packages/orbit-themer/package.json
@@ -13,23 +13,26 @@
   },
   "author": "Kiwi.com",
   "license": "MIT",
+  "peerDependencies": {
+    "react": ">=17.0.0",
+    "react-dom": ">=17.0.0",
+    "styled-components": "^5"
+  },
   "dependencies": {
-    "@kiwicom/orbit-components": "*",
-    "@kiwicom/orbit-design-tokens": "*",
-    "@types/react": "^17.0.26",
-    "copy-to-clipboard": "^3.3.1",
     "deep-object-diff": "^1.1.9",
     "object-hash": "^3.0.0",
-    "prism-react-renderer": "^1.3.5",
-    "ramda": "^0.28.0",
     "react": "^17.0.2",
     "react-color": "^2.19.3",
-    "react-dom": "^17.0.2",
-    "react-hot-loader": "^4.13.0",
-    "styled-components": "^5.3.5"
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@kiwicom/babel-plugin-orbit-components": "^3.5.2",
-    "babel-loader": "^8.2.5"
+    "babel-loader": "^8.2.5",
+    "@kiwicom/orbit-components": "*",
+    "@kiwicom/orbit-design-tokens": "*",
+    "styled-components": "^5.3.5",
+    "prism-react-renderer": "^1.3.5",
+    "copy-to-clipboard": "^3.3.1",
+    "@types/react": "^17.0.26"
   }
 }
