--- a/docs/src/documentation/03-components/05-input/inputselect/meta.yml
+++ b/docs/src/documentation/03-components/05-input/inputselect/meta.yml
@@ -1,3 +1,3 @@
 title: InputSelect
-description: Displays a set of options that can be grouped. Allows searching for an option
+description: Searchable Select that allows users to filter options by typing directly into the field
 type: tabs
