chore: update storybook to v7

--- a/packages/orbit-components/package.json
+++ b/packages/orbit-components/package.json
@@ -6,7 +6,7 @@
   "main": "lib/index.js",
   "module": "es/index.js",
   "scripts": {
-    "storybook": "start-storybook -p 6007 -c .storybook --ci",
+    "storybook": "storybook dev -p 6007 -c .storybook --ci",
     "cy:dev": "vite cypress/integration --logLevel silent",
     "cy:run": "start-server-and-test cy:dev http-get://localhost:3000 'cypress run'",
     "cy:open": "start-server-and-test cy:dev http-get://localhost:3000 'cypress open'",
@@ -20,7 +20,7 @@
     "check:types": "tsc --p tsconfig.json",
     "flow:ci": "flow check",
     "build:iconsPng": "ts-node --esm config/generatePngIcons.mts",
-    "build:storybook": "ts-node --esm  config/build/buildIcons.mts && build-storybook -c .storybook -o .out",
+    "build:storybook": "ts-node --esm  config/build/buildIcons.mts && storybook build -c .storybook -o .out",
     "eslint:check": "eslint . --report-unused-disable-directives",
     "deploy:storybook": "yarn storybook-to-ghpages -e ./.out",
     "deploy:surge": "yarn surge .out/",
@@ -92,17 +92,16 @@
     "@nanostores/react": "^0.2.0",
     "@nanostores/router": "^0.3.1",
     "@size-limit/webpack-why": "^8.0.0",
-    "@storybook/addon-actions": "^6.4.19",
-    "@storybook/addon-backgrounds": "^6.5.9",
+    "@storybook/addon-actions": "^7.0.20",
+    "@storybook/addon-backgrounds": "^7.0.20",
     "@storybook/addon-info": "^6.0.0-alpha.2",
-    "@storybook/addon-knobs": "^6.4.0",
-    "@storybook/addon-viewport": "^6.4.19",
-    "@storybook/addons": "^6.4.19",
-    "@storybook/builder-webpack5": "^6.5.0-alpha.46",
-    "@storybook/manager-webpack5": "^6.4.19",
-    "@storybook/react": "^6.4.19",
-    "@storybook/storybook-deployer": "^2.8.10",
-    "@storybook/theming": "^6.4.19",
+    "@storybook/addon-knobs": "^7.0.2",
+    "@storybook/addon-viewport": "^7.0.20",
+    "@storybook/addons": "^7.0.20",
+    "@storybook/react": "^7.0.20",
+    "@storybook/react-webpack5": "^7.0.20",
+    "@storybook/storybook-deployer": "^2.8.16",
+    "@storybook/theming": "^7.0.20",
     "@svgr/core": "^6.3.1",
     "@svgr/plugin-jsx": "^6.3.1",
     "@svgr/plugin-prettier": "^6.3.1",
@@ -123,6 +122,7 @@
     "babel-plugin-require-context-hook": "^1.0.0",
     "babel-plugin-styled-components": "^2.0.7",
     "cypress": "^10.11.0",
+    "eslint-plugin-storybook": "^0.6.12",
     "flowgen": "^1.20.1",
     "fs-extra": "^9.0.1",
     "jest-styled-components": "^7.0.5",
@@ -137,6 +137,7 @@
     "react-window": "^1.8.6",
     "sharp": "^0.30.5",
     "start-server-and-test": "^1.13.1",
+    "storybook": "^7.0.20",
     "styled-components": "^5.3.1",
     "surge": "^0.23.0",
     "svg2ttf": "^6.0.0",
