chore: use vite instead of webpack for storybook

--- a/packages/orbit-components/.storybook/tsconfig.json
+++ b/packages/orbit-components/.storybook/tsconfig.json
@@ -3,6 +3,7 @@
     "noEmit": true,
     "module": "commonjs",
     "target": "ESNext",
+    "esModuleInterop": true,
     "jsx": "react"
   },
   "include": ["./**/*"]
