--- a/packages/orbit-components/package.json
+++ b/packages/orbit-components/package.json
@@ -92,14 +92,12 @@
     "@nanostores/react": "^0.2.0",
     "@nanostores/router": "^0.3.1",
     "@size-limit/webpack-why": "^8.0.0",
-    "@storybook/addon-actions": "^7.0.20",
-    "@storybook/addon-backgrounds": "^7.0.20",
+    "@storybook/addon-essentials": "^7.0.20",
     "@storybook/addon-info": "^6.0.0-alpha.2",
     "@storybook/addon-knobs": "^7.0.2",
-    "@storybook/addon-viewport": "^7.0.20",
-    "@storybook/addons": "^7.0.20",
+    "@storybook/builder-vite": "^7.0.20",
     "@storybook/react": "^7.0.20",
-    "@storybook/react-webpack5": "^7.0.20",
+    "@storybook/react-vite": "^7.0.20",
     "@storybook/storybook-deployer": "^2.8.16",
     "@storybook/theming": "^7.0.20",
     "@svgr/core": "^6.3.1",
@@ -112,12 +110,11 @@
     "@testing-library/react-hooks": "^7.0.0",
     "@testing-library/user-event": "^13.1.1",
     "@types/readable-stream": "^2.3.13",
-    "@types/storybook__react": "^5.2.1",
     "@types/styled-components": "^5.1.15",
     "@types/svgicons2svgfont": "^10.0.1",
     "@types/testing-library__jest-dom": "^5.14.5",
     "@types/webpack": "^5.28.0",
-    "@vitejs/plugin-react": "^2.2.0",
+    "@vitejs/plugin-react": "^4.0.0",
     "babel-loader": "^9.1.2",
     "babel-plugin-require-context-hook": "^1.0.0",
     "babel-plugin-styled-components": "^2.0.7",
@@ -143,7 +140,7 @@
     "svg2ttf": "^6.0.0",
     "svgicons2svgfont": "^10.0.0",
     "ttf2woff2": "^4.0.1",
-    "vite": "^3.2.7",
+    "vite": "^4.3.9",
     "webpack": "^5.76.0",
     "webpack-cli": "^4.9.2"
   }
