chore: replace info addon with blocks

--- a/packages/orbit-components/package.json
+++ b/packages/orbit-components/package.json
@@ -85,8 +85,9 @@
     "@nanostores/router": "^0.3.1",
     "@size-limit/webpack-why": "^8.0.0",
     "@storybook/addon-essentials": "^7.0.20",
-    "@storybook/addon-info": "^6.0.0-alpha.2",
     "@storybook/addon-knobs": "^7.0.2",
+    "@storybook/addons": "^7.0.20",
+    "@storybook/blocks": "^7.0.20",
     "@storybook/builder-vite": "^7.0.20",
     "@storybook/react": "^7.0.20",
     "@storybook/react-vite": "^7.0.20",
