fix(eslint-plugin): fix missing tsup dependency

--- a/packages/eslint-plugin-orbit-components/package.json
+++ b/packages/eslint-plugin-orbit-components/package.json
@@ -35,10 +35,10 @@
     "eslint": ">=8"
   },
   "devDependencies": {
-    "del-cli": "^5.0.0",
-    "tsup": "^6.1.0"
+    "del-cli": "^5.0.0"
   },
   "dependencies": {
-    "@babel/types": "=7.12.10"
+    "@babel/types": "=7.12.10",
+    "tsup": "^6.1.0"
   }
 }
