--- a/packages/orbit-components/package.json
+++ b/packages/orbit-components/package.json
@@ -6,7 +6,7 @@
   "main": "lib/index.js",
   "module": "es/index.js",
   "scripts": {
-    "storybook": "start-storybook -p 6007 -c .storybook --ci",
+    "storybook": "storybook dev -p 6007 -c .storybook --ci",
     "cy:dev": "vite cypress/integration --logLevel silent",
     "cy:run": "start-server-and-test cy:dev http-get://localhost:3000 'cypress run'",
     "cy:open": "start-server-and-test cy:dev http-get://localhost:3000 'cypress open'",
@@ -20,7 +20,7 @@
     "check:types": "tsc --p tsconfig.json",
     "flow:ci": "flow check",
     "build:iconsPng": "ts-node --esm config/generatePngIcons.mts",
-    "build:storybook": "ts-node --esm  config/build/buildIcons.mts && build-storybook -c .storybook -o .out",
+    "build:storybook": "ts-node --esm  config/build/buildIcons.mts && storybook build -c .storybook -o .out",
     "eslint:check": "eslint . --report-unused-disable-directives",
     "deploy:storybook": "yarn storybook-to-ghpages -e ./.out",
     "deploy:surge": "yarn surge .out/",
@@ -61,14 +61,6 @@
   ],
   "license": "MIT",
   "resolutions": {
-    "webpack": "^5.69.1",
-    "css-loader": "^5.0.0",
-    "dotenv-webpack": "^6.0.0",
-    "html-webpack-plugin": "^5.0.0",
-    "style-loader": "^2.0.0",
-    "terser-webpack-plugin": "^5.0.0",
-    "webpack-dev-middleware": "^4.1.0",
-    "webpack-virtual-modules": "^0.4.2",
     "ts-node": "^10.9.1"
   },
   "peerDependencies": {
@@ -92,17 +84,15 @@
     "@nanostores/react": "^0.2.0",
     "@nanostores/router": "^0.3.1",
     "@size-limit/webpack-why": "^8.0.0",
-    "@storybook/addon-actions": "^6.4.19",
-    "@storybook/addon-backgrounds": "^6.5.9",
-    "@storybook/addon-info": "^6.0.0-alpha.2",
-    "@storybook/addon-knobs": "^6.4.0",
-    "@storybook/addon-viewport": "^6.4.19",
-    "@storybook/addons": "^6.4.19",
-    "@storybook/builder-webpack5": "^6.5.0-alpha.46",
-    "@storybook/manager-webpack5": "^6.4.19",
-    "@storybook/react": "^6.4.19",
-    "@storybook/storybook-deployer": "^2.8.10",
-    "@storybook/theming": "^6.4.19",
+    "@storybook/addon-essentials": "^7.0.20",
+    "@storybook/addon-knobs": "^7.0.2",
+    "@storybook/addons": "^7.0.20",
+    "@storybook/blocks": "^7.0.20",
+    "@storybook/builder-vite": "^7.0.20",
+    "@storybook/react": "^7.0.20",
+    "@storybook/react-vite": "^7.0.20",
+    "@storybook/storybook-deployer": "^2.8.16",
+    "@storybook/theming": "^7.0.20",
     "@svgr/core": "^6.3.1",
     "@svgr/plugin-jsx": "^6.3.1",
     "@svgr/plugin-prettier": "^6.3.1",
@@ -113,16 +103,16 @@
     "@testing-library/react-hooks": "^7.0.0",
     "@testing-library/user-event": "^13.1.1",
     "@types/readable-stream": "^2.3.13",
-    "@types/storybook__react": "^5.2.1",
     "@types/styled-components": "^5.1.15",
     "@types/svgicons2svgfont": "^10.0.1",
     "@types/testing-library__jest-dom": "^5.14.5",
     "@types/webpack": "^5.28.0",
-    "@vitejs/plugin-react": "^2.2.0",
+    "@vitejs/plugin-react": "^4.0.0",
     "babel-loader": "^9.1.2",
     "babel-plugin-require-context-hook": "^1.0.0",
     "babel-plugin-styled-components": "^2.0.7",
     "cypress": "^10.11.0",
+    "eslint-plugin-storybook": "^0.6.12",
     "flowgen": "^1.20.1",
     "fs-extra": "^9.0.1",
     "jest-styled-components": "^7.0.5",
@@ -137,13 +127,14 @@
     "react-window": "^1.8.6",
     "sharp": "^0.30.5",
     "start-server-and-test": "^1.13.1",
+    "storybook": "^7.0.20",
     "styled-components": "^5.3.1",
     "surge": "^0.23.0",
     "svg2ttf": "^6.0.0",
     "svgicons2svgfont": "^10.0.0",
     "ttf2woff2": "^4.0.1",
-    "vite": "^3.2.7",
+    "vite": "^4.3.9",
     "webpack": "^5.76.0",
-    "webpack-cli": "^4.9.2"
+    "webpack-cli": "^5.1.4"
   }
 }
