--- a/packages/orbit-components/package.json
+++ b/packages/orbit-components/package.json
@@ -16,6 +16,7 @@
     "cy:open": "start-server-and-test cy:dev http-get://localhost:3000 'cypress open'",
     "build": "ts-node --esm config/build/index.mts",
     "tailwind": "npx tailwindcss -i ./src/tailwind.css -o ./lib/tailwind.css",
+    "test": "jest",
     "prepublishOnly": "yarn build",
     "size:build": "yarn build --size",
     "size": "size-limit",
@@ -23,10 +24,11 @@
     "fetch:icons": "ts-node --esm config/fetchIcons.mts",
     "check:icons": "ts-node --esm config/checkIconsCli.mts",
     "check:types": "tsc --p tsconfig.json",
+    "check:lint": "eslint . --report-unused-disable-directives",
+    "check:css": "yarn stylelint './src/**/*.tsx'",
     "flow:ci": "flow check",
     "build:iconsPng": "ts-node --esm config/generatePngIcons.mts",
     "build:storybook": "ts-node --esm  config/build/buildIcons.mts && storybook build -c .storybook -o .out",
-    "eslint:check": "eslint . --report-unused-disable-directives",
     "deploy:storybook": "yarn storybook-to-ghpages -e ./.out",
     "deploy:surge": "yarn surge .out/",
     "deploy:updateURL": "ts-node --esm config/deploymentUtils.mts updateLiveURL",
