--- a/nx.json
+++ b/nx.json
@@ -17,7 +17,7 @@
       "dependsOn": ["^build"],
       "inputs": ["production", "^production"]
     },
-    "lint": {
+    "check:lint": {
       "inputs": ["{workspaceRoot}/.eslintrc.cjs"]
     }
   },
