--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "build-ci": "yarn size:build",
     "components": "yarn workspace @kiwicom/orbit-components",
     "checks": "ts-node --esm scripts/checks.mts",
-    "check:types": "nx run-many --target check:types --all --parallel",
+    "check:types:all": "nx run-many --target check:types --all --parallel",
+    "check:types:affected": "nx affected --target check:types --parallel",
     "check:links": "yarn checks --links",
-    "check:css": "nx run-many --target check:css @kiwicom/orbit-components @kiwicom/orbit.kiwi --parallel",
+    "check:css": "nx affected --target check:css @kiwicom/orbit-components @kiwicom/orbit.kiwi --parallel",
     "check:statuses": "zx docs/services/componentStatuses.mjs",
+    "check:lint:affected": "nx affected -t check:lint --parallel",
+    "check:lint:all": "nx run-many -t check:lint --all --parallel",
     "dev:test": "cross-env NODE_ENV=loki yarn dev",
     "dev": "yarn components storybook",
     "docs": "yarn workspace @kiwicom/orbit.kiwi",
